# study-databricks-import

./: .gitignore  CLAUDE.md  Makefile  README.md  doppler.yaml  pyproject.toml
data/: customers.csv  events.json  orders.csv  products.parquet
databricks/: README.md
databricks/notebooks/: 01_volume_json_to_delta.py
databricks/sql/: 02_catalog.sql  03_ctas.sql  04_values_seed.sql  05_create_managed_volume.sql  06_load_events_from_volume.sql  07_verify_events_from_volume.sql  08_drop_volume_artifacts.sql
databricks/sql/pipeline/: 01_create_events_pipeline_mv.sql  02_verify_events_pipeline_mv.sql
databricks/sql/volume/: 02_drop_volume_artifacts.sql
docs/: 01_confirmed_scope.md  01_goal.md  02_managed_volume_validation.md  02_pipeline_validation.md  03_technical_debt.md
scripts/: databricks_sql_test.sh  databricks_volume_upload.sh
src/study_databricks_import/: __init__.py  sql_connectivity.py
src/study_databricks_import.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
